--- a/ConferenceService/pom.xml
+++ b/ConferenceService/pom.xml
@@ -107,8 +107,9 @@
         <finalName>conference-service-demo</finalName>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
-                <version>3.3.1</version>
+                <version>3.3.2</version>
             </plugin>
             <plugin>
                 <groupId>fish.payara.maven.plugins</groupId>
